src/test/ui/rfc-2627-raw-dylib/link-ordinal-not-foreign-fn.stderr
warning: the feature `raw_dylib` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/link-ordinal-not-foreign-fn.rs:1:12
   |
LL | #![feature(raw_dylib)]
   |            ^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #58713 <https://github.com/rust-lang/rust/issues/58713> for more information

error: attribute should be applied to a foreign function
  --> $DIR/link-ordinal-not-foreign-fn.rs:4:1
   |
LL | #[link_ordinal(123)]
   | ^^^^^^^^^^^^^^^^^^^^

error: attribute should be applied to a foreign function
  --> $DIR/link-ordinal-not-foreign-fn.rs:8:1
   |
LL | #[link_ordinal(123)]
   | ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors; 1 warning emitted

